--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ModernArchitectureApp</string>
+
+    <string name="splash_screen_label">SPLASH SCREEN</string>
+    <string name="splash_screen_info">Initialization in progress …</string>
 </resources>
